name:                blockchain-restful-address-index
version:             0.1.0.0
synopsis:            RESTful HTTP "addr-index bitcoind" wrapper
description:         See README.md
homepage:            https://github.com/githubuser/blockchain-restful-address-index#readme
license:             PublicDomain
author:              Rune K. Svendsen
maintainer:          runevsvend@gmail.com
category:            Bitcoin,Web
build-type:          Simple
cabal-version:       >=1.10


executable rest-addr
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -main-is Main -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , bitcoin-api
                     , bitcoin-types
                     , base58string
                     , haskoin-core
                     , snap-core == 0.9.8.0
                     , bytestring                >= 0.9.1 && < 0.11
                     , MonadCatchIO-transformers >= 0.2.1 && < 0.4
                     , mtl                       >= 2     && < 3
                     , snap-server               >= 0.9   && < 0.10
                     , transformers
                     , snap
                     , aeson
                     , aeson-pretty
                     , http-client
                     , string-conversions
                     , configurator
  default-language:    Haskell2010
  other-modules:       Lib,Config


source-repository head
  type:     git
  location: https://github.com/githubuser/blockchain-restful-address-index
