name:                blockchain-restful-address-index
version:             0.1.0.0
synopsis:            RESTful HTTP "addr-index bitcoind" wrapper
description:         See README.md
homepage:            https://github.com/githubuser/blockchain-restful-address-index#readme
license:             PublicDomain
author:              Rune K. Svendsen
maintainer:          runevsvend@gmail.com
category:            Bitcoin,Web
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     APISpec.Blockchain
  ghc-options:         -W -O2 -threaded -with-rtsopts=-N

  build-depends:       base                      >= 4     && < 5
                     , text
                     , base16-bytestring
                     , hexstring
                     , bitcoin-api
                     , bitcoin-types
                     , bitcoin-tx
                     , base58string
                     , haskoin-core
                     , bytestring
                     , mtl
                     , transformers
                     , aeson
                     , aeson-pretty
                     , binary
                     , string-conversions
                     , configurator
                     , servant
                     , servant-server
                     , either

  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Config
                       Lib.FundingInfo


executable rest-addr
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , base16-bytestring
                     , hexstring
                     , bitcoin-api
                     , bitcoin-types
                     , bitcoin-tx
                     , base58string
                     , haskoin-core
                     , bytestring
                     , mtl
                     , transformers
                     , aeson
                     , aeson-pretty
                     , binary
                     , http-client
                     , string-conversions
                     , configurator
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , either

  other-modules:       Lib.FundingInfo
                       ,Lib.PublishTx.PublishTx
                       ,Lib.PublishTx.Types
                       ,Config

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/blockchain-restful-address-index
