name:                blockchain-restful-address-index
version:             0.2.0.0
synopsis:            RESTful HTTP "addr-index bitcoind" wrapper
description:         See README.md
homepage:            https://github.com/runeksvendsen/blockchain-restful-address-index#readme
license:             PublicDomain
author:              Rune K. Svendsen
maintainer:          runevsvend@gmail.com
category:            Bitcoin,Web
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     APISpec.Blockchain
                     , APISpec.Types
  ghc-options:         -W

  build-depends:       base                      >= 4     && < 5
                     , base16-bytestring
                     , text
                     , string-conversions
                     , haskoin-core              == 0.4.0
                     , aeson
                     , servant                   == 0.8.1
                     , http-api-data
                     , http-media
                     , errors
                     , cereal
                     , hexstring

  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Lib.FundingInfo.Types,
                       Orphans



executable rest-addr
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , base16-bytestring
                     , hexstring
                     , bitcoin-api
                     , bitcoin-types
                     , bitcoin-tx
                     , base58string
                     , haskoin-core              == 0.4.0
                     , bytestring
                     , mtl
                     , transformers
                     , aeson
                     , cereal
                     , http-client
                     , string-conversions
                     , configurator
                     , servant                   == 0.8.1
                     , servant-server            == 0.8.1
                     , http-api-data
                     , http-media
                     , wai
                     , warp
                     , either
                     , errors

  other-modules:       Lib.FundingInfo.FundingInfo
                     , Lib.FundingInfo.Internal.Types
                     , Orphans
                     , APISpec.Blockchain
                     , Lib.FundingInfo.Types
                     , Lib.TxOutProof.Types
                     , Lib.PublishTx.PublishTx
                     , Lib.TxOutProof.Proof
                     , Config

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/runeksvendsen/blockchain-restful-address-index
